finished product tiles with hover effect

--- a/index.html
+++ b/index.html
@@ -234,62 +234,70 @@
         </div>
     </div>
     <!-- Popular Items-->
-    <div class="popular-items">
-        <div id="actions-wrapper">
-            <a href="#">
-                <div class="image-wrapper"><img src="img/Heart_(24x24).png" alt="">
-                </div>
-            </a>
-            <a href="#">
-                <div class="image-wrapper"><img src="img/Plus_(24x24).png" alt=""></div>
-            </a>
+    <div class="popular-items-container">
+        <div class="popular-items">
+            <div id="actions-wrapper">
+                <a href="#">
+                    <div class="image-wrapper"><img src="img/Heart_(24x24).png" alt="">
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="image-wrapper"><img src="img/Plus_(24x24).png" alt=""></div>
+                </a>
+            </div>
+            <div id="wrapper" style="background-image: url('./img/pitem_1.png');">
+            </div>
+            <div id="details-wrapper">
+                <p>Some description</p>
+            </div>
         </div>
-        <div id="wrapper">
+        <div class="popular-items">
+            <div id="actions-wrapper">
+                <a href="#">
+                    <div class="image-wrapper"><img src="img/Heart_(24x24).png" alt="">
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="image-wrapper"><img src="img/Plus_(24x24).png" alt=""></div>
+                </a>
+            </div>
+            <div id="wrapper" style="background-image: url('./img/pitem_2.png');">
+            </div>
+            <div id="details-wrapper">
+                <p>Some description</p>
+            </div>
         </div>
-        <div id="details-wrapper">
-            <p>Some description</p>
+        <div class="popular-items">
+            <div id="actions-wrapper">
+                <a href="#">
+                    <div class="image-wrapper"><img src="img/Heart_(24x24).png" alt="">
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="image-wrapper"><img src="img/Plus_(24x24).png" alt=""></div>
+                </a>
+            </div>
+            <div id="wrapper" style="background-image: url('./img/pitem_3.png');">
+            </div>
+            <div id="details-wrapper">
+                <p>Some description</p>
+            </div>
         </div>
-        <div id="actions-wrapper">
-            <a href="#">
-                <div class="image-wrapper"><img src="img/Heart_(24x24).png" alt="">
-                </div>
-            </a>
-            <a href="#">
-                <div class="image-wrapper"><img src="img/Plus_(24x24).png" alt=""></div>
-            </a>
-        </div>
-        <div id="wrapper">
-        </div>
-        <div id="details-wrapper">
-            <p>Some description</p>
-        </div>
-        <div id="actions-wrapper">
-            <a href="#">
-                <div class="image-wrapper"><img src="img/Heart_(24x24).png" alt="">
-                </div>
-            </a>
-            <a href="#">
-                <div class="image-wrapper"><img src="img/Plus_(24x24).png" alt=""></div>
-            </a>
-        </div>
-        <div id="wrapper">
-        </div>
-        <div id="details-wrapper">
-            <p>Some description</p>
-        </div>
-        <div id="actions-wrapper">
-            <a href="#">
-                <div class="image-wrapper"><img src="img/Heart_(24x24).png" alt="">
-                </div>
-            </a>
-            <a href="#">
-                <div class="image-wrapper"><img src="img/Plus_(24x24).png" alt=""></div>
-            </a>
-        </div>
-        <div id="wrapper">
-        </div>
-        <div id="details-wrapper">
-            <p>Some description</p>
+        <div class="popular-items">
+            <div id="actions-wrapper">
+                <a href="#">
+                    <div class="image-wrapper"><img src="img/Heart_(24x24).png" alt="">
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="image-wrapper"><img src="img/Plus_(24x24).png" alt=""></div>
+                </a>
+            </div>
+            <div id="wrapper" style="background-image: url('./img/pitem_4.png');">
+            </div>
+            <div id="details-wrapper">
+                <p>Some description</p>
+            </div>
         </div>
     </div>
 
